[gd_scene load_steps=7 format=3 uid="uid://cns5gj0nnlevl"]

[ext_resource type="Script" uid="uid://bwasnvf8opr5b" path="res://scenes/simple_text_input_modal.gd" id="1_h1d7f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3vby6"]
bg_color = Color(0.233925, 0.233925, 0.233925, 1)

[sub_resource type="InputEventKey" id="InputEventKey_h1d7f"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_if8l0"]
events = [SubResource("InputEventKey_h1d7f")]

[sub_resource type="InputEventKey" id="InputEventKey_bdmpn"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_xt36x"]
events = [SubResource("InputEventKey_bdmpn")]

[node name="SimpleTextInputModal" type="Panel"]
offset_right = 341.0
offset_bottom = 108.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3vby6")
script = ExtResource("1_h1d7f")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Label"

[node name="TextEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
emoji_menu_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
shortcut = SubResource("Shortcut_if8l0")
text = "Confirm"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
shortcut = SubResource("Shortcut_xt36x")
text = "Cancel"

[connection signal="text_submitted" from="MarginContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_text_submitted"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ConfirmButton" to="." method="_on_confirm_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
